--- a/app/src/main/res/layout/fragment_trending.xml
+++ b/app/src/main/res/layout/fragment_trending.xml
@@ -6,7 +6,8 @@
         <ExpandableListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/listview">
+            android:id="@+id/listview"
+            android:groupIndicator="@null">
         </ExpandableListView>
 
 </LinearLayout>
