--- a/app/src/main/res/layout/episode_player.xml
+++ b/app/src/main/res/layout/episode_player.xml
@@ -1,58 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_display"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/deep_purple_700">
+    android:background="@color/colorPrimary"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/mini_player"
         android:layout_width="match_parent"
         android:layout_height="68dp"
+        android:background="@color/colorPrimaryDark"
         android:gravity="center|top"
-        android:textSize="16sp"
+        android:paddingBottom="5dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:paddingBottom="5dp"
         android:paddingTop="5dp"
-        android:background="@color/blue_700"
-        >
+        android:textSize="16sp">
+
         <FrameLayout
-            android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
             <ImageView
+                android:id="@+id/mp_poster"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/mp_poster"/>
+                android:layout_height="match_parent" />
 
         </FrameLayout>
+
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="4"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
             <TextView
+                android:id="@+id/mp_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
-                android:id="@+id/mp_title"
-                />
+                android:textColor="@color/white"/>
+
             <TextView
+                android:id="@+id/mp_show_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/mp_show_title"
                 android:textSize="11dp"
-                />
+                android:textColor="@color/white"/>
         </LinearLayout>
+
         <Button
             android:id="@+id/mp_play"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/icons8_play"
-            />
+            android:background="@drawable/icons8_play_filled" />
     </LinearLayout>
 
     <LinearLayout
@@ -60,23 +67,23 @@
         android:layout_width="match_parent"
         android:layout_height="68dp"
         android:gravity="center|top"
-        android:textSize="16sp"
-        >
+        android:textSize="16sp">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="5"
-            android:paddingLeft="16dp"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:orientation="vertical"
+            android:paddingLeft="16dp">
+
             <TextView
+                android:id="@+id/ep_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:id="@+id/ep_title"
-                android:textSize="24sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="24sp" />
 
         </LinearLayout>
 
@@ -85,65 +92,103 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/icons8_sort_down"
-            />
+            android:src="@drawable/icons8_sort_down" />
     </LinearLayout>
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
+        android:id="@+id/background"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="5"
-        app:cardBackgroundColor="@color/cardview_dark_background"
-        app:cardElevation="0dp"
-        app:contentPaddingLeft="40dp"
-        app:contentPaddingRight="40dp"
-        app:contentPaddingTop="16dp">
 
-        <FrameLayout
+        android:orientation="vertical">
+
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            android:layout_weight="9"
+            android:gravity="center"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/poster"
-                android:layout_width="match_parent"
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="@color/black">
+
+            <TextView
+                android:id="@+id/elapsed"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:scaleType="fitXY" />
+                android:layout_gravity="left"
+                android:gravity="center"
+                android:text="00:00"
+                android:textColor="@color/white" />
 
-        </FrameLayout>
-    </android.support.v7.widget.CardView>
+            <TextView
+                android:id="@+id/duration"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_gravity="right"
+                android:gravity="center"
+                android:text="00:00"
+                android:textColor="@color/white" />
 
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        </RelativeLayout>
 
-    <LinearLayout
+        <SeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:gravity="center">
+        back
+        android:layout_weight="1">
+       <!-- <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@color/black"
+            android:alpha=".7"/>-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:gravity="center">
 
-        <Button
-            android:id="@+id/ep_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
 
-            android:background="@drawable/icons8_rewind_filled" />
+            <Button
+                android:id="@+id/ep_back"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
 
-        <Button
-            android:id="@+id/ep_play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+                android:background="@drawable/icons8_rewind_filled" />
 
-            android:background="@drawable/icons8_circled_play_filled" />
+            <Button
+                android:id="@+id/ep_play"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
+                android:background="@drawable/icons8_play_filled" />
 
-        <Button
-            android:id="@+id/ep_next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            <Button
+                android:id="@+id/ep_next"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
 
-            android:background="@drawable/icons8_fast_forward_filled"/>
-    </LinearLayout>
+                android:background="@drawable/icons8_fast_forward_filled" />
+        </LinearLayout>
+
+    </FrameLayout>
 
 </LinearLayout>
