--- a/app/src/main/res/layout/show_item.xml
+++ b/app/src/main/res/layout/show_item.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rc"
+    android:layout_height="match_parent"
+    android:gravity="center">
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/red_600"
-        >
-
-
-    </android.support.v7.widget.RecyclerView>
-
+        android:text="hello"
+        android:textSize="38sp"/>
 </LinearLayout>
