--- a/app/src/main/res/layout/episode_detail.xml
+++ b/app/src/main/res/layout/episode_detail.xml
@@ -4,68 +4,62 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
 
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_vertical">
+        android:orientation="vertical">
+
 
         <LinearLayout
             android:id="@+id/test"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="250dp"
             android:background="@color/colorPrimaryDark"
             android:padding="10dp">
+
             <FrameLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                >
+                android:layout_height="wrap_content"
+
+                android:background="@color/colorAccent">
 
                 <ImageView
                     android:id="@+id/detail_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitXY"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
             </FrameLayout>
 
             <TextView
-                android:layout_width="0dp"
                 android:id="@+id/detail_title"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginStart="8dp"
                 android:layout_weight="3"
-                android:padding="16dp"
-                android:layout_marginBottom="16dp"
+                android:paddingLeft="16dp"
                 android:textColor="@color/white" />
         </LinearLayout>
 
-        <LinearLayout
-
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
-
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/detail_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:text="texdsfsdfsfsfs" />
-        </LinearLayout>
+    </LinearLayout>
 
 
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:orientation="vertical"
+        android:paddingBottom="16dp"
+        android:paddingTop="16dp">
+
+        <TextView
+            android:id="@+id/detail_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:text="texdsfsdfsfsfs" />
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
@@ -77,4 +71,5 @@
         android:src="@drawable/icons8_play_filled"
         app:layout_anchor="@id/test"
         app:layout_anchorGravity="bottom|right|end" />
+
 </android.support.design.widget.CoordinatorLayout>
