--- a/app/src/main/res/layout/episode_detail_old.xml
+++ b/app/src/main/res/layout/episode_detail_old.xml
@@ -1,54 +1,58 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
     >
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <LinearLayout
-            android:id="@+id/test"
+        <RelativeLayout
+            android:id="@+id/main"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@color/colorPrimaryDark"
-            android:padding="10dp">
-            <FrameLayout
-                android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:background="@color/colorPrimaryDark">
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                >
+                android:gravity="center_vertical">
+                <FrameLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="8dp"
+                    >
 
-                <ImageView
-                    android:id="@+id/detail_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitXY"/>
+                    <ImageView
+                        android:id="@+id/detail_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
-            </FrameLayout>
+                </FrameLayout>
+                <TextView
+                    android:id="@+id/detail_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
 
-            <TextView
-                android:layout_width="0dp"
-                android:id="@+id/detail_title"
-                android:layout_height="match_parent"
-                android:layout_marginStart="8dp"
-                android:layout_weight="3"
-                android:padding="16dp"
-                android:textColor="@color/white" />
-        </LinearLayout>
+                    android:paddingLeft="16dp"
+                    android:textColor="@color/white" />
 
+
+            </LinearLayout>
+
+        </RelativeLayout>
         <LinearLayout
 
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingBottom="16dp"
+            android:paddingTop="16dp">
 
             <TextView
                 android:id="@+id/detail_description"
@@ -57,17 +61,14 @@
                 android:layout_margin="16dp"
                 android:text="texdsfsdfsfsfs" />
         </LinearLayout>
-
-
     </LinearLayout>
-
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/detail_play"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_margin="16dp"
         android:clickable="true"
         android:src="@drawable/icons8_play_filled"
-        app:layout_anchor="@id/test"
+        app:layout_anchor="@id/main"
         app:layout_anchorGravity="bottom|right|end" />
 </android.support.design.widget.CoordinatorLayout>
