--- a/app/src/main/res/layout/episode_player.xml
+++ b/app/src/main/res/layout/episode_player.xml
@@ -43,15 +43,15 @@
                 android:id="@+id/mp_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18dp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="18dp" />
 
             <TextView
                 android:id="@+id/mp_show_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="11dp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="11dp" />
         </LinearLayout>
 
         <Button
@@ -67,7 +67,8 @@
         android:layout_width="match_parent"
         android:layout_height="68dp"
         android:gravity="center|top"
-        android:textSize="16sp">
+        android:textSize="16sp"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -93,6 +94,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:src="@drawable/icons8_sort_down" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -113,82 +115,84 @@
 
         </LinearLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@color/black">
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/elapsed"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="left"
-                android:gravity="center"
-                android:text="00:00"
-                android:textColor="@color/white" />
 
-            <TextView
-                android:id="@+id/duration"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:layout_gravity="right"
-                android:gravity="center"
-                android:text="00:00"
-                android:textColor="@color/white" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="-8dp"
+        android:layout_weight=".7"
+        android:background="@color/colorPrimaryDark"
+        android:padding="16dp">
 
-        </RelativeLayout>
+        <TextView
+            android:id="@+id/elapsed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:gravity="center"
+            android:text="00:00"
+
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/duration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+
+            android:layout_gravity="right"
+            android:gravity="center"
+            android:text="00:00"
+            android:textColor="@color/white" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <SeekBar
             android:id="@+id/seekBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
 
-    </LinearLayout>
+            />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        back
-        android:layout_weight="1">
-       <!-- <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@color/black"
-            android:alpha=".7"/>-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:gravity="center">
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingTop="10dp">
 
 
-            <Button
+            <ImageButton
                 android:id="@+id/ep_back"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
+                android:background="@drawable/rounded_button"
+                android:src="@drawable/icons8_rewind_filled" />
 
-                android:background="@drawable/icons8_rewind_filled" />
-
-            <Button
+            <ImageButton
                 android:id="@+id/ep_play"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:background="@drawable/icons8_play_filled" />
 
-            <Button
+                android:background="@drawable/rounded_button"
+                android:src="@drawable/icons8_play_filled" />
+
+            <ImageButton
                 android:id="@+id/ep_next"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-
-                android:background="@drawable/icons8_fast_forward_filled" />
+                android:background="@drawable/rounded_button"
+                android:src="@drawable/icons8_fast_forward_filled" />
         </LinearLayout>
-
-    </FrameLayout>
+    </RelativeLayout>
 
 </LinearLayout>
