--- a/app/src/main/res/layout/activity_show_detail.xml
+++ b/app/src/main/res/layout/activity_show_detail.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -23,6 +24,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="400dp"
+                android:background="@color/white"
                 android:orientation="vertical">
 
                 <ImageView
@@ -32,13 +34,7 @@
                     android:layout_weight="7"
                     android:scaleType="fitXY"
                     android:src="@android:drawable/arrow_up_float" />
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:visibility="gone"
-                    android:text="TextView"
-                    android:textSize="24dp" />
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
