--- a/app/src/main/res/layout/episode_player.xml
+++ b/app/src/main/res/layout/episode_player.xml
@@ -37,6 +37,7 @@
             android:layout_height="match_parent"
             android:layout_weight="4"
             android:gravity="center_vertical"
+            android:layout_marginRight="8dp"
             android:orientation="vertical">
 
             <TextView
@@ -97,26 +98,12 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <ImageView
         android:id="@+id/background"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="5"
-
-        android:orientation="vertical">
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="9"
-            android:gravity="center"
-            android:orientation="vertical">
-
-        </LinearLayout>
-
-    </LinearLayout>
-
+        />
 
     <RelativeLayout
         android:layout_width="match_parent"
