--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,11 +8,11 @@
         android:title="action_settings"
         android:orderInCategory="100"
         app:showAsAction="never"/>
-
     <item
-        android:id="@+id/menu_search"
-        android:title="menu_search"
-        appcompat:actionViewClass="android.widget.SearchView"
-        appcompat:showAsAction="always"/>
+        android:id="@+id/action_open_search"
+        android:title="action_settings"
+        android:icon="@drawable/icons8_search2"
+        appcompat:showAsAction="always" />
+
 
 </menu>
