--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.marlonjmoorer.odkast.SearchActivity"
-    android:background="@color/white"
+    android:background="@color/colorPrimaryLight"
     >
 
     <com.arlib.floatingsearchview.FloatingSearchView
