--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@color/cyan_500</color>
-    <color name="colorPrimaryDark">@color/cyan_800</color>
-    <color name="colorAccent">@color/purple_A400</color>
+    <color name="colorPrimary">@color/blue_grey_800</color>
+    <color name="colorPrimaryDark">@color/blue_grey_900</color>
+    <color name="colorPrimaryLight">@color/blue_grey_400</color>
+    <color name="colorAccent">@color/pink_A700</color>
+    <color name="colorAccentLight">@color/pink_A400</color>
     <color name="red_50">#FFEBEE</color>
     <color name="red_100">#FFCDD2</color>
     <color name="red_200">#EF9A9A</color>
