--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -6,4 +6,5 @@
     <item name="show_discription" type="id" />
     <item name="overflow_menu" type="id" />
     <item name="loading_overlay" type="id" />
+    <item name="subscribed" type="id" />
 </resources>
