--- a/app/src/main/res/layout/episode_player.xml
+++ b/app/src/main/res/layout/episode_player.xml
@@ -10,6 +10,7 @@
     android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/display"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="7"
@@ -146,6 +147,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="TextView"
+                android:textColor="@color/white"
                 android:textSize="24sp" />
 
             <TextView
@@ -154,6 +156,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="TextView"
+                android:textColor="@color/white"
                 android:textSize="24sp" />
         </LinearLayout>
 
@@ -212,22 +215,24 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@drawable/icons8_add_filled"
             android:background="@drawable/rounded_button"
-            />
+            android:visibility="gone"
+            app:srcCompat="@drawable/icons8_add_filled" />
 <LinearLayout
     android:layout_width="0dp"
     android:layout_height="match_parent"
     android:layout_weight="5"
     android:background="@null"
     />
+
         <ImageButton
             android:id="@+id/imageButton2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@drawable/ic_more_vert_black_24dp"
-            android:background="@drawable/rounded_button"/>
+            android:background="@drawable/rounded_button"
+            android:visibility="gone"
+            app:srcCompat="@drawable/ic_more_vert_black_24dp" />
 
     </LinearLayout>
 
