--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
 
-                        android:background="@color/colorPrimaryLight"
+                        android:background="@color/colorPrimary"
 
                         android:minHeight="?attr/actionBarSize"
                         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
