--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -20,7 +20,7 @@
         app:floatingSearch_close_search_on_keyboard_dismiss="true"/>
 
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/results"
         android:layout_width="match_parent"
         android:layout_height="551dp"
